# tangent-linalg

./: CMakeLists.txt  main.cpp  run_tests.sh
docs/: devlog.md
include/: matrix.hpp
include/tangent/: lu.hpp  matrix.hpp  vector.hpp
tests/: matrix_tests.cpp
